syntax = "proto3";

package telegram;
option go_package = "github.com/irfandi/neuratrade/services/backend-api/pkg/pb/telegram";

// TelegramService - Hosted by telegram-service, called by backend
// Used for sending messages to users via Telegram bot
service TelegramService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  rpc StreamEvents(StreamEventsRequest) returns (stream TelegramEvent);
  rpc SendActionAlert(SendActionAlertRequest) returns (SendActionAlertResponse);
  rpc SendQuestProgress(SendQuestProgressRequest) returns (SendQuestProgressResponse);
  rpc SendMilestoneAlert(SendMilestoneAlertRequest) returns (SendMilestoneAlertResponse);
  rpc SendRiskEvent(SendRiskEventRequest) returns (SendRiskEventResponse);
}

// UserService - Hosted by backend, called by telegram-service
// Used for user operations without ADMIN_API_KEY
service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetUserStatus(GetUserStatusRequest) returns (GetUserStatusResponse);
  rpc GetUserPreferences(GetUserPreferencesRequest) returns (GetUserPreferencesResponse);
  rpc SetUserPreferences(SetUserPreferencesRequest) returns (SetUserPreferencesResponse);
  rpc GetOpportunities(GetOpportunitiesRequest) returns (GetOpportunitiesResponse);
}

message SendMessageRequest {
  string chat_id = 1;
  string text = 2;
  string parse_mode = 3;
}

message SendMessageResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
  // Structured error code for programmatic handling
  // Values: USER_BLOCKED, CHAT_NOT_FOUND, RATE_LIMITED, INVALID_REQUEST, NETWORK_ERROR, TIMEOUT, INTERNAL_ERROR, UNKNOWN
  string error_code = 4;
  // Seconds to wait before retrying (only set for RATE_LIMITED errors)
  int32 retry_after = 5;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string version = 2;
  string service = 3;
}

message StreamEventsRequest {
  string chat_id = 1;
}

message ActionAlertPayload {
  string action = 1;
  string asset = 2;
  string price = 3;
  string size = 4;
  string strategy = 5;
  string reasoning = 6;
  bool risk_check_passed = 7;
  string quest_id = 8;
}

message QuestProgressPayload {
  string quest_id = 1;
  string quest_name = 2;
  int32 current = 3;
  int32 target = 4;
  int32 percent = 5;
  string time_remaining = 6;
}

message MilestonePayload {
  string amount = 1;
  string phase = 2;
  string next_target = 3;
}

message RiskEventPayload {
  string event_type = 1;
  string severity = 2;
  string message = 3;
  map<string, string> details = 4;
}

message TelegramEvent {
  string type = 1;
  string chat_id = 2;
  int64 timestamp = 3;
  oneof payload {
    ActionAlertPayload action = 4;
    QuestProgressPayload quest = 5;
    MilestonePayload milestone = 6;
    RiskEventPayload risk = 7;
  }
}

message SendActionAlertRequest {
  string chat_id = 1;
  string action = 2;
  string asset = 3;
  string price = 4;
  string size = 5;
  string strategy = 6;
  string reasoning = 7;
  bool risk_check_passed = 8;
  string quest_id = 9;
}

message SendActionAlertResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
}

message SendQuestProgressRequest {
  string chat_id = 1;
  string quest_id = 2;
  string quest_name = 3;
  int32 current = 4;
  int32 target = 5;
  int32 percent = 6;
  string time_remaining = 7;
}

message SendQuestProgressResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
}

message SendMilestoneAlertRequest {
  string chat_id = 1;
  string amount = 2;
  string phase = 3;
  string next_target = 4;
}

message SendMilestoneAlertResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
}

message SendRiskEventRequest {
  string chat_id = 1;
  string event_type = 2;
  string severity = 3;
  string message = 4;
  map<string, string> details = 5;
}

message SendRiskEventResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
}
